--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     Is A New Virus  :)
     And is not minner bitcoin.
     is a destroyer disk!
-    code languages used on this virus: Python, Batchfile
+    code languages used on this virus: Python, Batchfile, HTML
     
     enjoy :)
     
