--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <title>Heno</title>
   </head>
   <body>
-    <pre style="word-wrap: break-word; white-space: pre-wrap;">Welcome to Hero!
-    Is A New Virus  :)
-    And is not minner bitcoin.
-    is a destroyer disk!
-    code languages used on this virus: Python, Batchfile, HTML
+    <pre style="word-wrap: break-word; white-space: pre-wrap;">Welcome to Heno!
+Is A New Virus  :)
+And is not minner bitcoin.
+is a destroyer disk!
+code languages used on this virus: Python, Batchfile, HTML
     
-    enjoy :)
+enjoy :)
     
     </pre>
   </body>
