--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@ code languages used on this virus: Python, Batchfile, HTML
 enjoy :)
     
     </pre>
-    <a href="https://github.com/b27xip/Heno" style="word-wrap: break-word; white-space: pre-wrap;">repository</a>
+    <a style="word-wrap: break-word; white-space: pre-wrap;" href="https://github.com/b27xip/Heno">repository</a>
   </body>
 </html>
