--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ enjoy :)
     
     </pre>
     <a style="word-wrap: break-word; white-space: pre-wrap;" href="https://github.com/b27xip/Heno">repository</a>
+    <a style="word-wrap: break-word; white-space: pre-wrap;" href="view-source:https://b27xip.github.io/Heno/">view source</a>
   </body>
 </html>
 <!-- is a html :D --!>
