--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ enjoy :)
     </pre>
     <a style="word-wrap: break-word; white-space: pre-wrap;" href="https://github.com/b27xip/Heno">repository</a>
     <br>
-    <a style="word-wrap: break-word; white-space: pre-wrap;" href="view-source:https://b27xip.github.io/Heno/">view source</a>
+    <a style="word-wrap: break-word; white-space: pre-wrap;" href="https://github.com/b27xip/Heno/archive/refs/heads/main.zip">download</a>
   </body>
 </html>
 <!-- is a html :D --!>
